Teste do atualizador automatico
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@11 31482026-630c-0410-91bb-adf60aae4351

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -28,5 +28,8 @@
         <a href="http://groups.google.com/group/motiro">motiro@googlegroups.com</a>.
         Junte-se ao mutirÃ£o!
       </p>
+      <p>
+          <b>Este é um teste da atualização automática.</b>
+      </p>
   </body>
 </html>
