SVNReporter acessivel para o usuario
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@18 31482026-630c-0410-91bb-adf60aae4351

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>Motiro: Bem-vindo</title>
+  </head>
   <body>
       <h1>Motiro</h1>
       <p>
@@ -29,7 +30,7 @@
         Junte-se ao mutirÃ£o!
       </p>
       <p>
-          <b>Este é um teste da atualização automática.</b>
+          <b>Este ï¿½ um teste da atualizaï¿½ï¿½o automï¿½tica.</b>
       </p>
   </body>
 </html>
