--- a/public/selenium/tests/TestMainPage.html
+++ b/public/selenium/tests/TestMainPage.html
@@ -31,6 +31,11 @@
       <td>Seja bem-vindo!</td>
       <td>&nbsp;</td>
     </tr>
+    <tr>
+      <td>assertTextPresent</td>
+      <td>Motiro versão 0.1</td>
+      <td>&nbsp;</td>
+    </tr>
   </tbody>
 </table>
 </body>
