Adicionado link para o feed RSS no titulo do canal
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@69 31482026-630c-0410-91bb-adf60aae4351

--- a/public/selenium/tests/TestReportHTML.html
+++ b/public/selenium/tests/TestReportHTML.html
@@ -21,6 +21,21 @@
       <td>Últimas notícias do Subversion</td>
       <td>&nbsp;</td>
     </tr>
+    <tr>
+      <td>assertElementPresent</td>
+      <td>//img[@src='/images/rss.gif']</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>clickAndWait</td>
+      <td>//img[@src='/images/rss.gif']</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>assertLocation</td>
+      <td>/feed/subversion</td>
+      <td>&nbsp;</td>
+    </tr>
   </tbody>
 </table>
 </body>
