Template de RSS traduzido para builder e URL do servidor gerada dinamicamente
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@70 31482026-630c-0410-91bb-adf60aae4351

--- a/public/selenium/tests/TestReportRSS.html
+++ b/public/selenium/tests/TestReportRSS.html
@@ -17,9 +17,9 @@
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>assertTitle</td>
+      <td>assertText</td>
+      <td>//rss/channel/title</td>
       <td>Motiro | Subversion</td>
-      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>assertElementPresent</td>
