Testes de aceitacao traduzidos de table driven para remote control style
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@77 31482026-630c-0410-91bb-adf60aae4351

--- a/public/selenium/tests/TestReportRSS.html
+++ b/public/selenium/tests/TestReportRSS.html
@@ -19,7 +19,7 @@
     <tr>
       <td>assertText</td>
       <td>//rss/channel/title</td>
-      <td>Motiro | Subversion</td>
+      <td>Motiro - Subversion</td>
     </tr>
     <tr>
       <td>assertElementPresent</td>
